ui/app/styles/app.scss
/* Copyright (c) 2017, Outright Mental Inc. (http://outright.io) All Rights Reserved. */

@import "bootstrap";
@import "navbar";
@import "palette";

@font-face {
  font-family: OxygenMono;
  src: local("Oxygen Mono"),
  local("Oxygen Mono"),
  url(OxygenMono-Regular.ttf);
  font-weight: bold;
}

body {
  background: #000000;
  color: $gray;
  font-family: OxygenMono, monospace;
}

a {
  color: lighten($yellow,10%);
}

img {
  width:100%;
  height: auto;
}

.engine {
  background: #202020;
  padding: 20px;
  h1 {
    font-weight: bold;
  }
  h3 {
    text-transform: uppercase;
  }
  h1, h2, h3, h4, h5, h6 {
    margin-top: 0;
  }
  .metric {
    margin-top:2em;
    margin-bottom: 0;
    font-size: 0.8em;
    letter-spacing: 0.2em;
    font-weight:bold;
    text-transform: uppercase;
  }
  .yellow {
    color: $yellow;
  }
  .red {
    color: $red;
  }
  .green {
    color: $green;
  }
}

#timeline {
  margin-bottom: 20px;
  .placeholder {
    opacity: 0.25;
  }
}

.table-list {
  table, tr, th, td, thead, tbody { background: transparent; }
  .item {
    cursor: pointer;
  }
}

.placeholder-field {
  opacity: 0.6;
  text-align: left;
  margin-bottom: 0;
  padding-top: 7px;
}

